provarAnt/00D180000008cIAEAY/objects/Co_op__c.object
<CustomObject>
    <description>Co-Op object</description>
    <fields>
        <fullName>Average_Monthly_Searches__c</fullName>
        <description>Co-Op</description>
        <label>Average Monthly Searches</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Op_Amount__c</fullName>
        <label>Co-op Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Op_Level_of_Service__c</fullName>
        <label>Co-op Level of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Op_Make__c</fullName>
        <label>Co-op Make</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Op_Percent__c</fullName>
        <label>Co-op Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Co_Op__c</fullName>
        <description>Auto number for Co-Op</description>
        <displayFormat>Co-op-{000}</displayFormat>
        <label>Co-op</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Co-Op contract lookup field.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Co_Op</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Field__c</fullName>
        <description>co-op ID field to make unique identifier.</description>
        <externalId>true</externalId>
        <label>ID Field</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Co-op</label>
    <listViews>
        <fullName>Co_Op_Records</fullName>
        <columns>NAME</columns>
        <columns>Co_Op_Amount__c</columns>
        <columns>Co_Op_Level_of_Service__c</columns>
        <columns>Co_Op_Make__c</columns>
        <columns>Co_Op_Percent__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>Co-Op Records</label>
    </listViews>
    <nameField>
        <label>Co-op Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Co-op</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>